Have a minimum height for legs in the expanded route view, and prevent them from overflowing the expanded area

--- a/web/css/route_graph.less
+++ b/web/css/route_graph.less
@@ -168,15 +168,3 @@
         opacity: 0;
     }
 }
-
-
-.leg-bar {
-    cursor: -moz-zoom-in;
-    cursor: -webkit-zoom-in;
-}
-.expanded {
-    .leg-bar {
-        cursor: -moz-zoom-out;
-        cursor: -webkit-zoom-out;        
-    }
-}
